Add Game of Life web app files (index.html, style.css, script.js)

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Conway's Game of Life</title>
+  <title>Conway's Game of Life - Version 1.1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Include Chart.js CDN -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="container">
-    <h1>Conway's Game of Life</h1>
+    <h1>Conway's Game of Life - Version 1.1</h1>
     <div id="controls">
       <input type="number" id="boardSize" class="control-input" value="50" min="10" max="200" title="Board Size">
       <button id="setBoardSizeBtn" class="control-button" title="Set Board Size">Set Size</button>
@@ -66,6 +66,7 @@
     </div>
   </div>
 
+  <!-- Include your script at the end of the body -->
   <script src="script.js"></script>
 </body>
 </html>
