Add Game of Life web app files (index.html, style.css, script.js)

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </div>
 
-  <!-- Script -->
+  <!-- Include your script.js file here -->
   <script src="script.js"></script>
 </body>
 </html>
