Add Game of Life web app files (index.html, style.css, script.js)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,53 @@
 
     <!-- Pattern Selector -->
     <div id="patternSelector">
-      <!-- Pattern cards will be generated dynamically -->
+      <!-- Glider Pattern Card -->
+      <div class="pattern-card" data-pattern-key="glider">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Glider</div>
+      </div>
+
+      <!-- Lightweight Spaceship (LWSS) Pattern Card -->
+      <div class="pattern-card" data-pattern-key="lwss">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Lightweight Spaceship</div>
+      </div>
+
+      <!-- Blinker Pattern Card -->
+      <div class="pattern-card" data-pattern-key="blinker">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Blinker</div>
+      </div>
+
+      <!-- Block Pattern Card -->
+      <div class="pattern-card" data-pattern-key="block">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Block</div>
+      </div>
+
+      <!-- Beehive Pattern Card -->
+      <div class="pattern-card" data-pattern-key="beehive">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Beehive</div>
+      </div>
+
+      <!-- Loaf Pattern Card -->
+      <div class="pattern-card" data-pattern-key="loaf">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Loaf</div>
+      </div>
+
+      <!-- Boat Pattern Card -->
+      <div class="pattern-card" data-pattern-key="boat">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Boat</div>
+      </div>
+
+      <!-- Tub Pattern Card -->
+      <div class="pattern-card" data-pattern-key="tub">
+        <canvas width="80" height="80"></canvas>
+        <div class="pattern-name">Tub</div>
+      </div>
     </div>
 
     <!-- Explanation Section -->
