--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 <body>
   <div id="container">
     <h1>Conway's Game of Life</h1>
+    <!-- Instructions Section -->
+    <div id="instructions">
+      <h2>How to Use the Game</h2>
+      <ol>
+        <li>Set the board size using the <strong>Board Size</strong> input and click <strong>Set Size</strong>. The default is 50x50.</li>
+        <li>Click on cells in the grid to toggle them alive or dead.</li>
+        <li>Use <strong>Random Fill</strong> to populate the board with random live cells.</li>
+        <li>Select a pattern from the pattern selector to add predefined shapes to the board.</li>
+        <li>Adjust the simulation speed using the speed slider.</li>
+        <li>Click <strong>Start</strong> to begin the simulation.</li>
+        <li>You can <strong>Pause</strong> the simulation or <strong>Clear</strong> the board at any time.</li>
+      </ol>
+    </div>
     <div id="controls">
       <input type="number" id="boardSize" class="control-input" value="50" min="10" max="200" title="Board Size">
       <button id="setBoardSizeBtn" class="control-button" title="Set Board Size">Set Size</button>
