Add Game of Life web app files (index.html, style.css, script.js)

--- a/index.html
+++ b/index.html
@@ -42,33 +42,7 @@
     </div>
 
     <!-- Pattern Selector -->
-    <div id="patternSelector">
-      <!-- Glider Pattern Card -->
-      <div class="pattern-card" data-pattern-key="glider">
-        <div class="pattern-grid"></div>
-        <div class="pattern-name">Glider</div>
-      </div>
-
-      <!-- Lightweight Spaceship (LWSS) Pattern Card -->
-      <div class="pattern-card" data-pattern-key="lwss">
-        <div class="pattern-grid"></div>
-        <div class="pattern-name">LWSS</div>
-      </div>
-
-      <!-- Blinker Pattern Card -->
-      <div class="pattern-card" data-pattern-key="blinker">
-        <div class="pattern-grid"></div>
-        <div class="pattern-name">Blinker</div>
-      </div>
-
-      <!-- Block Pattern Card -->
-      <div class="pattern-card" data-pattern-key="block">
-        <div class="pattern-grid"></div>
-        <div class="pattern-name">Block</div>
-      </div>
-
-      <!-- Add other patterns similarly -->
-    </div>
+    <div id="patternSelector"></div>
 
     <!-- Explanation Section -->
     <div id="explanation">
